# JiPP2

./: CMakeLists.txt
FirstClass/: CMakeLists.txt
FirstClass/include/: FirstClass.h
FirstClass/src/: FirstClass.cpp  main.cpp
allocation_basics/: CMakeLists.txt  main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
include/: calc.h
konstruktorKopiujacy/: CMakeLists.txt
konstruktorKopiujacy/include/: Pojazd.h
konstruktorKopiujacy/src/: Pojazd.cpp  main.cpp
lab10/szablon/: CMakeLists.txt
lab10/szablon/include/: Line.h
lab10/szablon/src/: main.cpp
lab3/: CMakeLists.txt
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/include/: FunkcjaKwadratowa.h  ProstopadloscianLab4.h
lab4/src/: FunkcjaKwadratowa.cpp  ProstopadloscianLab4.cpp  main.cpp
lab5/: CMakeLists.txt
lab5/include/: Point.h
lab5/src/: Point.cpp  main.cpp
lab6/funkcje_zaprzyjaznione/: CMakeLists.txt
lab6/funkcje_zaprzyjaznione/include/: Node.h
lab6/funkcje_zaprzyjaznione/src/: Node.cpp  main.cpp
lab6/przeciazenie_operatorow/: CMakeLists.txt
lab6/przeciazenie_operatorow/include/: Complex.h  Triangle.h  Vector.h
lab6/przeciazenie_operatorow/src/: Complex.cpp  Triangle.cpp  Vector.cpp  main.cpp
lab7/dziedziczenie/: CMakeLists.txt
lab7/dziedziczenie/include/: Figure.h
lab7/dziedziczenie/src/: Figure.cpp  main.cpp
lab7/polimorfizm/: CMakeLists.txt
lab7/polimorfizm/src/: main.cpp
lab8/: CMakeLists.txt
lab8/include/: Note.h
lab8/src/: Note.cpp  main.cpp
lab9/kontenery/: CMakeLists.txt
lab9/kontenery/include/: Stop.h
lab9/kontenery/src/: Line.cpp  Stop.cpp  main.cpp
matrixApp/: CMakeLists.txt
matrixApp/include/: appFunctions.h
matrixApp/src/: appFunctions.cpp  main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: lib.h  matrixLib.h
matrixLib/src/: lib.cpp  matrixLib.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: calc.cpp
src/: calc.cpp  main.cpp
structures/: CMakeLists.txt
structures/src/: main.cpp
zadania_klasy/: CMakeLists.txt
zadania_klasy/include/: Prostopadloscian.h
zadania_klasy/src/: Prostopadloscian.cpp  main.cpp
