cmake_minimum_required(VERSION 3.16)

project(simpleCalc)

project(zadania_klasy)

project(FirstClass)

project(structures)

project(allocation_basics)

project(matrixLib)

add_subdirectory(allocation_basics)

add_subdirectory(simpleCalc)

add_subdirectory(firstLib)

add_subdirectory(firstLibCall)

add_subdirectory(FirstClass)

add_subdirectory(structures)

add_subdirectory(zadania_klasy)

add_subdirectory(matrixApp)

add_subdirectory(matrixLib)