cmake_minimum_required(VERSION 3.16)


project(Repozytorium)

add_subdirectory(allocation_basics)

add_subdirectory(simpleCalc)

add_subdirectory(firstLib)

add_subdirectory(firstLibCall)

add_subdirectory(FirstClass)

add_subdirectory(structures)

add_subdirectory(zadania_klasy)

add_subdirectory(matrixApp)

add_subdirectory(matrixLib)

add_subdirectory(lab4)

add_subdirectory(lab5)

add_subdirectory(konstruktorKopiujacy)

add_subdirectory(lab6/funkcje_zaprzyjaznione)

add_subdirectory(lab6/przeciazenie_operatorow)

add_subdirectory(lab7/dziedziczenie)

add_subdirectory(lab3)

add_subdirectory(lab7/polimorfizm)

add_subdirectory(lab8)
add_subdirectory(lab9/kontenery)

